--- a/package.json
+++ b/package.json
@@ -5,10 +5,21 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "watch:backend": "tsc-watch -b tsconfig.backend.json",
+    "build:backend": "tsc -b tsconfig.backend.json",
+    "serve:backend": "nodemon ./dist/server.js"
   },
   "dependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/errorhandler": "^1.5.0",
+    "@types/express-session": "^1.17.0",
+    "@types/lusca": "^1.6.2",
+    "compression": "^1.7.4",
     "core-js": "^3.6.5",
+    "errorhandler": "^1.5.1",
+    "express-session": "^1.17.1",
+    "lusca": "^1.6.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
