--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "serve": "node ./dist/server.js",
+    "watch:frontend": "vue-cli-service build --watch",
+    "build:frontend": "vue-cli-service build",
     "watch:backend": "tsc-watch -b tsconfig.backend.json",
     "build:backend": "tsc -b tsconfig.backend.json",
     "serve:backend": "nodemon ./dist/server.js"
   },
   "dependencies": {
     "@types/compression": "^1.7.0",
+    "@types/core-js": "^2.5.3",
     "@types/errorhandler": "^1.5.0",
+    "@types/express": "^4.17.7",
     "@types/express-session": "^1.17.0",
     "@types/lusca": "^1.6.2",
     "compression": "^1.7.4",
     "core-js": "^3.6.5",
     "errorhandler": "^1.5.1",
+    "express": "^4.17.1",
     "express-session": "^1.17.1",
     "lusca": "^1.6.1",
     "vue": "^2.6.11",
